[gd_scene load_steps=6 format=2]

[ext_resource path="res://code/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/arrow_left_neutral.png" type="Texture" id=2]
[ext_resource path="res://assets/arrow_left.png" type="Texture" id=3]
[ext_resource path="res://assets/arrow_right_neutral.png" type="Texture" id=4]
[ext_resource path="res://assets/arrow_right.png" type="Texture" id=5]

[node name="Background" type="TextureRect"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 300.0
margin_right = 1024.0
margin_bottom = 448.0
rect_min_size = Vector2( 1024, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 404.0
margin_right = 619.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="LevelSelect" type="HBoxContainer" parent="CenterContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 215.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="Prev" type="TextureButton" parent="CenterContainer/VBoxContainer/LevelSelect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 29.0
margin_right = 65.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
_sections_unfolded = [ "Grow Direction", "Textures" ]

[node name="LevelLabel" type="Label" parent="CenterContainer/VBoxContainer/LevelSelect" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 69.0
margin_top = 11.0
margin_right = 145.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Level Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Next" type="TextureButton" parent="CenterContainer/VBoxContainer/LevelSelect" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 149.0
margin_right = 185.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[node name="PracticeSelect" type="CheckButton" parent="CenterContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 215.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Practice mode gives you a score - normal mode is a simple win or loss!"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Practice Mode"
flat = false
align = 2
_sections_unfolded = [ "Hint" ]

[node name="LightsSelect" type="CheckButton" parent="CenterContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 215.0
margin_bottom = 124.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Disables the flashing lights in the normal gameplay mode - intended for those with photosensitive epilepsy."
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Photosensitive Mode"
flat = false
align = 2
_sections_unfolded = [ "Hint" ]

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 128.0
margin_right = 215.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play!"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="CenterContainer/VBoxContainer/LevelSelect/Prev" to="." method="_on_Prev_pressed"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/LevelSelect/Next" to="." method="_on_Next_pressed"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="start_level"]


